Transported recent changes made to mobile client to desktop